@@ -1,5 +1,0 @@
-Manifest-Version: 1.0
-Class-Path: gsi-classes.jar
-Created-By: 1.4.1_01 (Sun Microsystems Inc.)
-Main-Class: Test
-
